# FinSight

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
infrastructure/monitoring/: prometheus.yml
infrastructure/monitoring/grafana/dashboards/: dashboard.yml  finsight-dashboard.json
infrastructure/monitoring/grafana/datasources/: prometheus.yml
scripts/: deploy_aws.sh  deploy_gcp.sh  fine_tune_model.py  generate_metrics.py  query_prometheus.sh  quick_metrics_demo.sh  setup_database.py  verify_metrics.sh
src/insight/: __init__.py
src/insight/api/: app.py  models.py
src/insight/api/routers/: health.py  prediction.py
src/insight/core/: __init__.py  config.py  logging.py
src/insight/data/: __init__.py  collectors.py  preprocessors.py  validators.py
src/insight/models/: __init__.py  caching.py  model_serving.py  sentiment_classifier.py
src/insight/monitoring/: __init__.py  metrics.py  middleware.py
